--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <title>RGBHack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./style/style.css" />
-    <style></style>
+    
   </head>
   <body>
-    <p>
-      In this example we have turned off parallax scrolling for mobile devices.
-      It works as expected on all desktop screens sizes.
-    </p>
-    <p>Scroll Up and Down this page to see the parallax scrolling effect.</p>
-
     <div class="parallax"></div>
 
-    <div style="height: 1000px; background-color: red; font-size: 36px;">
+    <div style="height: 100px; background-color: red; font-size: 36px;">
       This div is just here to enable scrolling. Tip: Try to remove the
       background-attachment property to remove the scrolling effect.
     </div>
