--- a/index.html
+++ b/index.html
@@ -1,19 +1,55 @@
 <!DOCTYPE html>
-<html>
-  <head>
-      <title>RGBHack</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./style/style.css" />
-    
-  </head>
-  <body>
-    <div class="parallax"></div>
-
-    <div style="height: 100px; background-color: red; font-size: 36px;">
-      This div is just here to enable scrolling. Tip: Try to remove the
-      background-attachment property to remove the scrolling effect.
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Parallax Website Demo</title>
+  <link rel="stylesheet" href="./style/style.css">
+</head>
+<body>
+  <div class="section1">
+    <div class="ptext">
+      <span class="border">
+        Parallax Website
+      </span>
     </div>
+  </div>
 
-    <div class="parallax"></div>
-  </body>
+  <section class="section section-light">
+    <h2>Section One</h2>
+  </section>
+
+  <div class="section2">
+    <div class="ptext">
+      <span class="border trans">
+        Image Two Text
+      </span>
+    </div>
+  </div>
+
+  <section class="section section-dark">
+    <h2>Section Two</h2>
+  </section>
+
+  <div class="section2">
+    <div class="ptext">
+      <span class="border trans">
+        Image Three Text
+      </span>
+    </div>
+  </div>
+
+  <section class="section section-dark">
+    <h2>Section Three</h2>
+  </section>
+
+  <div class="section1">
+    <div class="ptext">
+      <span class="border">
+          RGBHack
+      </span>
+    </div>
+  </div>
+</body>
 </html>
