--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Parallax Website Demo</title>
+  <title>RGBHack</title>
   <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
   <div class="section1">
     <div class="ptext">
+      <span class="border">
+        Parallax Website
+      </span>
       <span class="border">
         Parallax Website
       </span>
