parallax didnt work :(

--- a/index.html
+++ b/index.html
@@ -1,58 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>RGBHack</title>
-  <link rel="stylesheet" href="./style/style.css">
-</head>
-<body>
-  <div class="section1">
-    <div class="ptext">
-      <span class="border">
-        Parallax Website
-      </span>
-      <span class="border">
-        Parallax Website
-      </span>
-    </div>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>RGBHack</title>
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body>
 
-  <section class="section section-light">
-    <h2>Section One</h2>
-  </section>
-
-  <div class="section2">
-    <div class="ptext">
-      <span class="border trans">
-        Image Two Text
-      </span>
-    </div>
-  </div>
-
-  <section class="section section-dark">
-    <h2>Section Two</h2>
-  </section>
-
-  <div class="section2">
-    <div class="ptext">
-      <span class="border trans">
-        Image Three Text
-      </span>
-    </div>
-  </div>
-
-  <section class="section section-dark">
-    <h2>Section Three</h2>
-  </section>
-
-  <div class="section1">
-    <div class="ptext">
-      <span class="border">
-          RGBHack
-      </span>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
