make main box work

--- a/index.html
+++ b/index.html
@@ -11,9 +11,30 @@
     </div>
     <div class="main">
       <div class="content">
-        <div class="main-box">
-          <div class="main-text">
-            hello
+        <div class="section">
+          <div class="main-box">
+            <p class="title-text">
+              We’re a team of 4 high <br />
+              school students who <br />
+              Create <br />
+              Innovate<br />
+              Explore <br />
+              through <span class="gradient">computer science.</span>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="content">
+        <div class="section">
+          <div class="main-box">
+            <p class="title-text">
+              We’re a team of 4 high <br />
+              school students who <br />
+              Create <br />
+              Innovate<br />
+              Explore <br />
+              through <span class="gradient">computer science.</span>
+            </p>
           </div>
         </div>
       </div>
