add RGBHack logo to nav

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div class="header" id="myHeader">
-      <h2>My Header</h2>
+      <!-- <h2>My Header</h2> -->
+      <img src="./img/RGBHack_clearbg.png">
     </div>
     <div class="main">
       <div class="content">
