--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="header" id="myHeader">
       <!-- <h2>My Header</h2> -->
-      <img src="./img/RGBHack_clearbg.png">
+      <img src="./img/RGBHack_logo.png">
     </div>
     <div class="main">
       <div class="content">
