--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <p class="title-text">
               We’re a team of 4 high <br />
               school students who <br />
-              Create <br />
-              Innovate<br />
-              Explore <br />
+              <span style="color: #e06666;">Create</span><br />
+              <span style="color: #6aa84f">Inovate</span><br />
+              <span style="color: #3d85c6;">Explore</span> <br />
               through <span class="gradient">computer science.</span>
             </p>
           </div>
