--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="header" id="myHeader">
       <!-- <h2>My Header</h2> -->
-      <img src="./img/RGBHack_logo.png">
+      <img src="./img/RGBHack_logo.png" />
     </div>
     <div class="main">
       <div class="content">
@@ -18,7 +18,7 @@
               We’re a team of 4 high <br />
               school students who <br />
               <span style="color: #e06666;">Create</span><br />
-              <span style="color: #6aa84f">Inovate</span><br />
+              <span style="color: #6aa84f;">Inovate</span><br />
               <span style="color: #3d85c6;">Explore</span> <br />
               through <span class="gradient">computer science.</span>
             </p>
