--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./style/style.css" />
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="./img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/RGBHack_favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./img/RGBHack_favicon.ico" type="image/x-icon" />
     <title>RGBHack</title>
   </head>
   <body>
