--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./style/style.css" />
-    <link rel="shortcut icon" href="./img/RGBHack_favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="./img/RGBHack_favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon" />
     <title>RGBHack</title>
   </head>
   <body>
     <div class="header" id="myHeader">
       <img src="./img/RGBHack_logo.png" />
+      <nav>
+        <ul>
+          <li><a href="default.asp">Awards</a></li>
+          <li><a href="news.asp">Projects</a></li>
+          <li><a href="contact.asp">Team</a></li>
+        </ul>
+      </nav>
     </div>
     <div class="main">
       <div class="content">
