--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>RGBHack</title>
   </head>
   <body>
-    <div class="header" id="myHeader">
+    <div class="header sticky" id="myHeader">
       <img src="./img/RGBHack_logo.png" />
       <nav>
         <ul>
@@ -48,6 +48,6 @@
         </div>
       </div>
     </div>
-    <script src="./js/index.js"></script>
+    <!-- <script src="./js/index.js"></script> -->
   </body>
 </html>
