--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div class="header sticky" id="myHeader">
-      <img src="./img/RGBHack_logo.png" />
+      <a href="/">
+        <img src="./img/RGBHack_logo.png" href="/" style="margin-top: 8px;" />
+      </a>
       <nav>
         <ul>
           <li><a href="default.asp">Awards</a></li>
