--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" type="text/css" href="./style/style.css" />
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
     <title>RGBHack</title>
   </head>
   <body>
@@ -14,9 +18,9 @@
       </a>
       <nav>
         <ul>
-          <li><a href="default.asp">Awards</a></li>
-          <li><a href="news.asp">Projects</a></li>
-          <li><a href="contact.asp">Team</a></li>
+          <li><a href="#">Awards</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Team</a></li>
         </ul>
       </nav>
     </div>
@@ -24,12 +28,25 @@
       <div class="content">
         <div class="section">
           <div class="main-box">
-            <p class="title-text">
+            <p class="title-text" style="margin-bottom: 10px; margin-top: 5px;">
               We’re a team of 4 high <br />
               school students who <br />
-              <span style="color: #e06666;">Create</span><br />
-              <span style="color: #6aa84f;">Inovate</span><br />
-              <span style="color: #3d85c6;">Explore</span> <br />
+            </p>
+            <div>
+              <p class="title-text" style="margin: 0;">
+                <span style="color: #e06666; font-family: 'Press Start 2P';"
+                  >Create</span
+                ><br />
+                <span style="color: #6aa84f; font-family: 'Press Start 2P';"
+                  >Inovate</span
+                ><br />
+                <span style="color: #3d85c6; font-family: 'Press Start 2P';"
+                  >Explore</span
+                >
+                <br />
+              </p>
+            </div>
+            <p class="title-text" style="margin-top: 0; margin-bottom: 5px;">
               through <span class="gradient">computer science.</span>
             </p>
           </div>
