--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       </a>
       <nav>
         <ul>
-          <li><a href="#">Awards</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Team</a></li>
+          <li><a href="#" style="margin-right: 20px;">Awards</a></li>
+          <li><a href="#" style="margin-right: 20px;">Projects</a></li>
+          <li><a href="#" style="margin-right: 20px;">Team</a></li>
         </ul>
       </nav>
     </div>
