--- a/index.html
+++ b/index.html
@@ -28,27 +28,37 @@
       <div class="content">
         <div class="section">
           <div class="main-box">
-            <p class="title-text" style="margin-bottom: 10px; margin-top: 5px;">
-              We’re a team of 4 high <br />
-              school students who <br />
-            </p>
-            <div>
-              <p class="title-text" style="margin: 0;">
-                <span style="color: #e06666; font-family: 'Press Start 2P';"
-                  >Create</span
-                ><br />
-                <span style="color: #6aa84f; font-family: 'Press Start 2P';"
-                  >Inovate</span
-                ><br />
-                <span style="color: #3d85c6; font-family: 'Press Start 2P';"
-                  >Explore</span
-                >
-                <br />
+            <div class="title-div">
+              <p
+                class="title-text"
+                style="margin-bottom: 10px; margin-top: 5px;"
+              >
+                We’re a team of 4 high <br />
+                school students who <br />
+              </p>
+              <div>
+                <p class="title-text" style="margin: 0;">
+                  <span style="color: #e06666; font-family: 'Press Start 2P';"
+                    >Create</span
+                  ><br />
+                  <span style="color: #6aa84f; font-family: 'Press Start 2P';"
+                    >Inovate</span
+                  ><br />
+                  <span style="color: #3d85c6; font-family: 'Press Start 2P';"
+                    >Explore</span
+                  >
+                  <br />
+                </p>
+              </div>
+              <p class="title-text" style="margin-top: 0; margin-bottom: 5px;">
+                through <span class="gradient">computer science.</span>
               </p>
             </div>
-            <p class="title-text" style="margin-top: 0; margin-bottom: 5px;">
-              through <span class="gradient">computer science.</span>
-            </p>
+            <div class="RGB-div">
+              <div class="RGB-box" style="background-color: #e06666;"><span class="RGB-text">R</span></div>
+              <div class="RGB-box" style="background-color: #6aa84f;"><span class="RGB-text">G</span></div>
+              <div class="RGB-box" style="background-color: #3d85c6;"><span class="RGB-text">B</span></div>
+            </div>
           </div>
         </div>
       </div>
