change default font

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Space+Mono&display=swap"
       rel="stylesheet"
     />
+    >
     <title>RGBHack</title>
   </head>
   <body>
@@ -55,9 +56,15 @@
               </p>
             </div>
             <div class="RGB-div">
-              <div class="RGB-box" style="background-color: #e06666;"><span class="RGB-text">R</span></div>
-              <div class="RGB-box" style="background-color: #6aa84f;"><span class="RGB-text">G</span></div>
-              <div class="RGB-box" style="background-color: #3d85c6;"><span class="RGB-text">B</span></div>
+              <div class="RGB-box" style="background-color: #e06666;">
+                <span class="RGB-text">R</span>
+              </div>
+              <div class="RGB-box" style="background-color: #6aa84f;">
+                <span class="RGB-text">G</span>
+              </div>
+              <div class="RGB-box" style="background-color: #3d85c6;">
+                <span class="RGB-text">B</span>
+              </div>
             </div>
           </div>
         </div>
