add shadow on scroll for nav

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Space+Mono&display=swap"
       rel="stylesheet"
     />
-    >
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <title>RGBHack</title>
   </head>
   <body>
-    <div class="header sticky" id="myHeader">
+    <div class="header sticky" id="header">
       <a href="/">
         <img src="./img/RGBHack_logo.png" href="/" style="margin-top: 8px;" />
       </a>
@@ -84,6 +84,6 @@
         </div>
       </div>
     </div>
-    <!-- <script src="./js/index.js"></script> -->
+    <script src="./js/index.js"></script>
   </body>
 </html>
