--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </a>
       <nav>
         <ul>
-          <li><a href="#" style="margin-right: 20px;">Awards</a></li>
+          <li><a href="#awards" style="margin-right: 20px;">Awards</a></li>
           <li><a href="#" style="margin-right: 20px;">Projects</a></li>
           <li><a href="#" style="margin-right: 20px;">Team</a></li>
         </ul>
@@ -66,6 +66,13 @@
                 <span class="RGB-text">B</span>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="content" id="#awards">
+        <div class="section">
+          <div class="title-box">
+            <p class="title">Awards</p>
           </div>
         </div>
       </div>
