add hover style to nav

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <title>RGBHack</title>
   </head>
-  <body>
+  <body data-spy="scroll" data-target=".navbar" data-offset="50">
     <div class="header sticky" id="header">
       <a href="/">
-        <img src="./img/RGBHack_logo.png" href="/" style="margin-top: 8px;" />
+        <img src="./img/RGBHack_logo.png" href="/" style="margin-top: 8px; margin: 1vw;" />
       </a>
-      <nav>
+      <nav class="navbar navbar-inverse navbar-fixed-top">
         <ul>
           <li><a href="#awards" style="margin-right: 20px;">Awards</a></li>
           <li><a href="#" style="margin-right: 20px;">Projects</a></li>
