add functionality to nav bar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img src="./img/RGBHack_logo.png" href="/" style="margin-top: 8px; margin: 1vw;" />
       </a>
       <nav class="navbar navbar-inverse navbar-fixed-top">
-        <ul>
+        <ul class="nav">
           <li><a href="#awards" style="margin-right: 20px;">Awards</a></li>
           <li><a href="#" style="margin-right: 20px;">Projects</a></li>
           <li><a href="#" style="margin-right: 20px;">Team</a></li>
@@ -75,8 +75,8 @@
           </div>
         </div>
       </div>
-      <div class="content" id="#awards">
-        <div class="section">
+      <div class="content">
+        <div class="section"  id="awards" style="padding-top: 15vh;">
           <div class="title-box">
             <p class="title">Awards</p>
           </div>
