--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
     <div class="header sticky" id="header">
-      <a href="/">
-        <img src="./img/RGBHack_logo.png" href="/" style="margin-top: 8px; margin: 1vw;" />
+      <a href="#">
+        <img src="./img/RGBHack_logo.png" style="margin-top: 8px; margin: 1vw;" />
       </a>
       <nav class="navbar navbar-inverse navbar-fixed-top">
         <ul class="nav">
