responsive nav, style touch ups

--- a/index.html
+++ b/index.html
@@ -15,22 +15,32 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>RGBHack</title>
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
-    <div class="header sticky" id="header">
-      <a href="#">
-        <img src="./img/RGBHack_logo.png" style="margin-top: 8px; margin: 1vw;" />
-      </a>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <ul class="nav">
-          <li><a href="#awards" style="margin-right: 20px;">Awards</a></li>
-          <li><a href="#" style="margin-right: 20px;">Projects</a></li>
-          <li><a href="#" style="margin-right: 20px;">Team</a></li>
-        </ul>
-      </nav>
-    </div>
+      <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" id="header">
+        <div class="container">
+          <b class="navbar-brand p2p" href="#"><b></b><r>R</r><g>G</g><bl>B</bl>Hack</b></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Awards</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Team</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        
+    </nav>
     <div class="main">
       <div class="content">
         <div class="section">
@@ -38,7 +48,7 @@
             <div class="title-div">
               <p
                 class="title-text"
-                style="margin-bottom: 10px; margin-top: 5px;"
+                style="margin-bottom: 10px; margin-top: 5px; font-family: 'Space Mono'"
               >
                 We’re a team of 4 high <br />
                 school students who <br />
@@ -46,18 +56,18 @@
               <div>
                 <p class="title-text" style="margin: 0;">
                   <span style="color: #e06666; font-family: 'Press Start 2P';"
-                    >Create</span
+                    >Reinvent</span
                   ><br />
                   <span style="color: #6aa84f; font-family: 'Press Start 2P';"
-                    >Inovate</span
+                    >Generate</span
                   ><br />
                   <span style="color: #3d85c6; font-family: 'Press Start 2P';"
-                    >Explore</span
+                    >Build</span
                   >
                   <br />
                 </p>
               </div>
-              <p class="title-text" style="margin-top: 0; margin-bottom: 5px;">
+              <p class="title-text" style="margin-top: 0; margin-bottom: 5px; font-family: 'Space Mono'">
                 through <span class="gradient">computer science.</span>
               </p>
             </div>
