--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
       <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" id="header">
         <div class="container">
-          <b class="navbar-brand p2p" href="#"><b></b><r>R</r><g>G</g><bl>B</bl>Hack</b></a>
+            <a href="#">
+                <b class="navbar-brand p2p" href="#"><b></b><r>R</r><g>G</g><bl>B</bl>Hack</b></a>
+            </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#">Awards</a>
+                <a class="nav-link" href="#awards">Awards</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Projects</a>
