--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="#">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Team</a>
+                <a class="nav-link" href="#" style="margin-right: 0;">Team</a>
               </li>
             </ul>
           </div>
