change navbar background

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>RGBHack</title>
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
-      <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" id="header">
+      <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top header" id="header">
         <div class="container">
             <a href="#">
                 <b class="navbar-brand p2p" href="#"><b></b><r>R</r><g>G</g><bl>B</bl>Hack</b></a>
