change to reimagine

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <div>
                 <p class="title-text" style="margin: 0;">
                   <span style="color: #e06666; font-family: 'Press Start 2P';"
-                    >Reinvent</span
+                    >Reimagine</span
                   ><br />
                   <span style="color: #6aa84f; font-family: 'Press Start 2P';"
                     >Generate</span
