add award boxes

--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
           <div class="title-box">
             <p class="title">Awards</p>
           </div>
+          <div class="content-div">
+          <div class="content-box" style="float: left;">
+              placeholder
+          </div>
+          <div class="content-box" style="float: right;">
+              placeholder
+          </div>
+          </div>
         </div>
       </div>
     </div>
