--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="./img/background.png" alt="First slide">
+                    <img class="d-block w-90" src="./img/projects/alzheimersai.png" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="./img/bg.jpg" alt="Second slide">
+                    <img class="d-block w-100" src="./img/projects/spark_white_bg.png" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="./img/RGBHack_logo.png" alt="Third slide">
+                    <img class="d-block w-100" src="./img/bg.jpg" alt="Third slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
