--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <img class="d-block w-90" src="./img/projects/alzheimersai.png" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="./img/projects/spark_white_bg.png" alt="Second slide">
+                    <img class="d-block w-100" src="./img/projects/spark.png" alt="Second slide">
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="./img/bg.jpg" alt="Third slide">
