update award content

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           </div>
           <div class="content-box" style="float: right; padding: 3vh;">
               <p class="pixel-font" style="text-align: center; font-size: 4vh;">Latest Awards</p>
-              <p style="font-size: 3vh;">Our most recent project was AlzheimersAI, a tracking and identification system for Alzheimer's Disease. We earned the Best Social Good Award at 2020 StanHacks 2 Hackathon and the Best Use of Google Cloud Award & Honorable Mention at 2020 HackDSC Hackathon.</p>
+              <p style="font-size: 3vh;">Our most recent project was AlzheimersAI, a tracking and identification system for Alzheimer's Disease. We earned the Best Social Good Award at the 2020 StanHacks 2 Hackathon and the Best Use of Google Cloud Award & Honorable Mention at the 2020 HackDSC Hackathon.</p>
           </div>
           </div>
         </div>
