--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="#awards">Awards</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Projects</a>
+                <a class="nav-link" href="#projects">Projects</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#" style="margin-right: 0;">Team</a>
@@ -122,6 +122,23 @@
               <p class="pixel-font" style="text-align: center; font-size: 4vh;">Latest Awards</p>
               <p style="font-size: 3vh;">Our most recent project was AlzheimersAI, a tracking and identification system for Alzheimer's Disease. We earned the Best Social Good Award at the 2020 StanHacks 2 Hackathon and the Best Use of Google Cloud Award & Honorable Mention at the 2020 HackDSC Hackathon.</p>
           </div>
+          </div>
+        </div>
+      </div>
+            <div class="content">
+        <div class="section"  id="projects" style="padding-top: 15vh;">
+          <div class="title-box">
+            <p class="title">Projects</p>
+          </div>
+          <div class="content-div">
+            <div class="content-box" style="float: left; padding: 3vh;">
+                <p class="pixel-font" style="text-align: left; font-size: 4vh;">Spark</p>
+                <p style="font-size: 3vh;"></p>
+            </div>
+            <div class="content-box" style="float: right; padding: 3vh;">
+                <p class="pixel-font" style="text-align: left; font-size: 4vh;">AlzheimersAI</p>
+                <p style="font-size: 3vh;"></p>
+            </div>
           </div>
         </div>
       </div>
