--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
           <div class="content-div">
             <div class="content-box" style="float: left; padding: 3vh;">
                 <p class="pixel-font" style="text-align: left; font-size: 4vh;">Spark</p>
-                <p style="font-size: 3vh;"></p>
+                <p style="font-size: 3.16vh;">An empowering all-in-one productivity web app. Renders iframes to show multiple web pages in the one page. Features: Calendar, Tasks, Team Administration, Project Tracking, Messages, Meetings and Zoom Integration, Discussion Board.</p>
             </div>
             <div class="content-box" style="float: right; padding: 3vh;">
                 <p class="pixel-font" style="text-align: left; font-size: 4vh;">AlzheimersAI</p>
-                <p style="font-size: 3vh;"></p>
+                <p style="font-size: 3.3vh;">A website for early detection and tracking of Alzheimer's disease using AI. Best Social Good Award at 2020 StanHacks 2 Hackathon, Best Use of Google Cloud Award and Honorable Mention at 2020 HackDSC Hackathon.</p>
             </div>
           </div>
         </div>
