--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <div class="content-div">
             <div class="content-box" style="float: left; padding: 3vh;">
                 <p class="pixel-font" style="text-align: left; font-size: 4vh;">Spark</p>
-                <p style="font-size: 3.16vh;">An empowering all-in-one productivity web app. Renders iframes to show multiple web pages in the one page. Features: Calendar, Tasks, Team Administration, Project Tracking, Messages, Meetings and Zoom Integration, Discussion Board.</p>
+                <p style="font-size: 3.16vh;">An empowering all-in-one productivity web app. Renders iframes to show multiple web pages in the one page. Features: Calendar, Tasks, Team Administration, Project Tracking, Messages, Meetings and Zoom Integration, Discussion Boards.</p>
             </div>
             <div class="content-box" style="float: right; padding: 3vh;">
                 <p class="pixel-font" style="text-align: left; font-size: 4vh;">AlzheimersAI</p>
