change to fit color theme

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
               </p>
               <div>
                 <p class="title-text" style="margin: 0;">
-                  <span style="color: #e06666; font-family: 'Press Start 2P';"
+                  <span style="color: #f64040ff; font-family: 'Press Start 2P';"
                     >Reimagine</span
                   ><br />
-                  <span style="color: #6aa84f; font-family: 'Press Start 2P';"
+                  <span style="color: #3cff4aff; font-family: 'Press Start 2P';"
                     >Generate</span
                   ><br />
-                  <span style="color: #3d85c6; font-family: 'Press Start 2P';"
+                  <span style="color: #2e56ffff; font-family: 'Press Start 2P';"
                     >Build</span
                   >
                   <br />
@@ -82,13 +82,13 @@
               </p>
             </div>
             <div class="RGB-div">
-              <div class="RGB-box" style="background-color: #e06666;">
+              <div class="RGB-box" style="background-color: #f64040ff;">
                 <span class="RGB-text">R</span>
               </div>
-              <div class="RGB-box" style="background-color: #6aa84f;">
+              <div class="RGB-box" style="background-color: #3cff4aff;">
                 <span class="RGB-text">G</span>
               </div>
-              <div class="RGB-box" style="background-color: #3d85c6;">
+              <div class="RGB-box" style="background-color: #2e56ffff;">
                 <span class="RGB-text">B</span>
               </div>
             </div>
