--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     /> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <script src="https://unpkg.com/aos@2.1.1/dist/aos.js"></script>
     <link
       rel="stylesheet"
