--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-90 project-img" src="./img/projects/alzheimersai.png" alt="First slide">
+                    <img class="d-block w-90 project-img" style="height: 55vh;" src="./img/projects/alzheimersai.png" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-95 project-img" src="./img/projects/alzheimersai_diagram.png" alt="Second slide">
+                    <img class="d-block w-95 project-img" style="height: 50vh;" src="./img/projects/alzheimersai_diagram.png" alt="Second slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
