shorten top section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </nav>
     <div class="main">
       <div class="content">
-        <div class="section">
+        <div class="section-top">
           <div class="main-box" data-aos="fade-right">
             <div class="title-div"  >
               <p
