fix scroll to top

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top header" id="header" data-aos="fade-down">
         <div class="container">
             <a href="#">
-                <b class="navbar-brand p2p" href="#"><b></b><r>R</r><g>G</g><bl>B</bl>Hack</b></a>
+                <b class="navbar-brand p2p" href="#top"><b></b><r>R</r><g>G</g><bl>B</bl>Hack</b></a>
             </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -65,8 +65,8 @@
         </div>
         
     </nav>
-    <div class="main">
-<div class="section-top">
+    <div class="main" id="top">
+        <div class="section-top">
           <div class="main-box" data-aos="fade-right">
             <div class="title-div"  >
               <p
