add links to projects

--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@
           </div>
           <div class="content-div">
             <div class="content-box" style="float: left; padding: 3vh;" data-aos="fade-up-right">
-                <p class="pixel-font" style="text-align: left; font-size: 4vh;">Spark</p>
+                <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
+                  <p class="pixel-font" style="text-align: left; font-size: 4vh;">Spark</p>
+                </a>
                 <p style="font-size: 3.16vh; margin-bottom: 0;">An empowering all-in-one productivity web app. Renders iframes to show multiple web pages in the one page. Features: Calendar, Tasks, Team Administration, Project Tracking, Messages, Meetings and Zoom Integration, Discussion Boards.</p>
                 <a href="https://github.com/RGBHack/Spark" target="_blank">
                 <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
@@ -193,7 +195,9 @@
                 </a>
             </div>
             <div class="content-box" style="float: right; padding: 3vh;" data-aos="fade-up-left">
-                <p class="pixel-font" style="text-align: left; font-size: 4vh;">AlzheimersAI</p>
+                <a style="color: black; text-decoration: underline;" href="https://alzheimersai.tk/" target="_blank">
+                  <p class="pixel-font" style="text-align: left; font-size: 4vh;">AlzheimersAI</p>
+                </a>
                 <p style="font-size: 3.2vh; margin-bottom: 0;">A website for early detection and tracking of Alzheimer's disease using AI. Best Social Good Award at 2020 StanHacks 2 Hackathon, Best Use of Google Cloud Award and Honorable Mention at 2020 HackDSC Hackathon.</p>
                 <a href="https://github.com/RGBHack/AlzheimersAI" target="_blank">
                 <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
