--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                      <a class="nav-link" href="#projects">Projects</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#" style="margin-right: 0;">Team</a>
+                     <a class="nav-link" href="#team" style="margin-right: 0;">Team</a>
                   </li>
                </ul>
             </div>
@@ -212,9 +212,9 @@
             </div>
          </div>
          <div class="content">
-            <div class="section"  id="projects" style="padding-top: 15vh;">
+            <div class="section"  id="team" style="padding-top: 15vh;">
                <div class="title-box"  data-aos="fade-down">
-                  <p class="title">Projects</p>
+                  <p class="title">Team</p>
                </div>
                <div class="content-div">
                   <div class="content-box" style="float: left; padding: 3vh;" data-aos="fade-up-right">
