--- a/index.html
+++ b/index.html
@@ -41,13 +41,7 @@
       <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top header" id="header" data-aos="fade-down">
          <div class="container">
             <a href="#">
-               <b class="navbar-brand p2p" href="#top">
-                  <b></b>
-                  <r>R</r>
-                  <g>G</g>
-                  <bl>B</bl>
-                  Hack
-               </b>
+               <b class="navbar-brand p2p" href="#top"><b></b><r>R</r><g>G</g><bl>B</bl>Hack</b>
             </a>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -216,29 +210,52 @@
                <div class="title-box"  data-aos="fade-down">
                   <p class="title">Team</p>
                </div>
-               <div class="content-div">
-                  <div class="content-box" style="float: left; padding: 3vh;" data-aos="fade-up-right">
+               <div style="margin: auto; width: 94%; text-align: justify;">
+                  <div class="team-box" style="padding: 3vh; margin-top: 5vh; margin-left: 0; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
                      <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
-                        <p class="pixel-font" style="text-align: left; font-size: 4vh;">Spark</p>
+                        <p class="pixel-font" style="text-align: left; font-size: 3vh;">Raadwan Masum</p>
                      </a>
-                     <p style="font-size: 3.16vh; margin-bottom: 0;">An empowering all-in-one productivity web app. Renders iframes to show multiple web pages in the one page. Features: Calendar, Tasks, Team Administration, Project Tracking, Messages, Meetings and Zoom Integration, Discussion Boards.</p>
-                     <a href="https://github.com/RGBHack/Spark" target="_blank">
+                     <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
+                      <a href="https://github.com/RGBHack/Spark" target="_blank">
                         <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
                            <use xlink:href="#github-icon"></use>
                         </svg>
                      </a>
                   </div>
-                  <div class="content-box" style="float: right; padding: 3vh;" data-aos="fade-up-left">
-                     <a style="color: black; text-decoration: underline;" href="https://alzheimersai.tk/" target="_blank">
-                        <p class="pixel-font" style="text-align: left; font-size: 4vh;">AlzheimersAI</p>
+                  <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
+                     <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
+                        <p class="pixel-font" style="text-align: left; font-size: 3vh;">Raadwan Masum</p>
                      </a>
-                     <p style="font-size: 3.2vh; margin-bottom: 0;">A website for early detection and tracking of Alzheimer's disease using AI. Best Social Good Award at 2020 StanHacks 2 Hackathon, Best Use of Google Cloud Award and Honorable Mention at 2020 HackDSC Hackathon.</p>
-                     <a href="https://github.com/RGBHack/AlzheimersAI" target="_blank">
+                     <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
+                      <a href="https://github.com/RGBHack/Spark" target="_blank">
                         <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
                            <use xlink:href="#github-icon"></use>
                         </svg>
                      </a>
                   </div>
+                  <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
+                     <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
+                        <p class="pixel-font" style="text-align: left; font-size: 3vh;">Raadwan Masum</p>
+                     </a>
+                     <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
+                      <a href="https://github.com/RGBHack/Spark" target="_blank">
+                        <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
+                           <use xlink:href="#github-icon"></use>
+                        </svg>
+                     </a>
+                  </div>
+                  <div class="team-box" style="padding: 3vh; margin-top: 5vh; margin-right: 0; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
+                     <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
+                        <p class="pixel-font" style="text-align: left; font-size: 3vh;">Raadwan Masum</p>
+                     </a>
+                     <p style="font-size: 3.16vh; margin-bottom: 0;"></p>
+                      <a href="https://github.com/RGBHack/Spark" target="_blank">
+                        <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
+                           <use xlink:href="#github-icon"></use>
+                        </svg>
+                     </a>
+                  </div>
+                  <span class="stretch"></span>
                </div>
             </div>
          </div>
