--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         </svg>
                      </a>
                   </div>
-                  <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
+                  <div class="team-box" style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;" data-aos="fade-up-left">
                      <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
                         <p class="pixel-font" style="text-align: left; font-size: 3vh;">Raadwan Masum</p>
                      </a>
@@ -244,7 +244,7 @@
                         </svg>
                      </a>
                   </div>
-                  <div class="team-box" style="padding: 3vh; margin-top: 5vh; margin-right: 0; vertical-align: top; display: inline-block;" data-aos="fade-up-right">
+                  <div class="team-box" style="padding: 3vh; margin-top: 5vh; margin-right: 0; vertical-align: top; display: inline-block;" data-aos="fade-up-left">
                      <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
                         <p class="pixel-font" style="text-align: left; font-size: 3vh;">Raadwan Masum</p>
                      </a>
